@startuml
'https://plantuml.com/class-diagram

skinparam {
    BackgroundColor #F8EAD9
    BorderColor #F8EAD9
}

class Forum #F5C84C99 {
    - Long id
    - String name
    - LocalDate dob
    - String title
    - String text
    - String topic
    - LocalDate date
    - LocalDate lastReaction
    - int commentsCount
    - List<Comment> commentsList
    - User user
    - Set<Like> likes
    - Set<View> views
    }

class Comment #F5C84C99 {
    - Long id
    - String name
    - LocalDate dob
    - String text
    - LocalDate date
    - User user
    - Forum forum
    }

class Like #F5C84C99 {
    - Long id
    - String username
    - String forumTitle
    - User user
    - Forum forum
    }

class View #F5C84C99 {
    - Long id
    - String username
    - String forumTitle
    - User user
    - Forum forum
    }

class User #F5C84C99 {
    - String username
    - String password
    - boolean enabled
    - String apikey
    - String email
    - String name
    - String gender
    - LocalDate dob
    - String autismDiagnoses
    - Integer autismDiagnosesYear
    - String profilePictureUrl
    - Set<Authority> authorities
    - List<Comment> commentsList
    - Set<Forum> forums
    - Set<Like> likes
    - Set<View> views
    - Profile profile
}

class Authority #F5C84C99 {
    - String username
    - String authority
}

class Profile #F5C84C99 {
    - Long id
    - String bio
    - String name
    - LocalDate date
    - User user
}

class Review #F5C84C99 {
    - Long id
    - String review
    - String name
    - LocalDate dob
    - Integer autismDiagnosesYear
    - String profilePictureUrl
    - LocalDate date
    - User user
}

User "1" *--[#064D1A] "1" Profile
User "1" *--[#064D1A] "1" Review
User "1" *--[#064D1A] "0..*" Forum
User "1" *--[#064D1A] "0..*" Authority

Forum "1" *--[#7AC37A] "0..*" Comment
Forum "1" *--[#7AC37A] "0..*" Like
Forum "1" *--[#7AC37A] "0..*" View

User "1" *--[#F5C84C] "0..*" Comment
User "1" *--[#F5C84C] "0..*" Like
User "1" *--[#F5C84C] "0..*" View

@enduml
